--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport"
+content="width=device-width, initial-scale=1.0" />
+  <title>koso de poesia</title>
+  <link rel="stylesheet"
+href="style.css" />
+</head>
+<body>
+  <h1>koso de poesia</h1>
 
+  <select id="modo">
+    <option value="alfabetico">Alfabetico</option>
+      <option value="sinonimos">Sinonimos</option>
+      <option value="temas">Tematico</option>
+  </select>
+
+  <div id="contenido>"></div>
+
+  <script src="script.js"></script>
+</body>
+</html>
