--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport"
-content="width=device-width, initial-scale=1.0" />
-  <title>koso de poesia</title>
-  <link rel="stylesheet"
-href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mi Diccionario</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>koso de poesia</h1>
+  <h1>📘 Mi Diccionario</h1>
 
   <select id="modo">
-    <option value="alfabetico">Alfabetico</option>
-      <option value="sinonimos">Sinonimos</option>
-      <option value="temas">Tematico</option>
+    <option value="alfabetico">Alfabético</option>
+    <option value="sinonimos">Sinónimos</option>
+    <option value="temas">Temático</option>
   </select>
 
-  <div id="contenido>"></div>
+  <div id="contenido"></div>
 
   <script src="script.js"></script>
 </body>
