--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mi Diccionario</title>
+  <title>diccionario ejeejejje</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>📘 Mi Diccionario</h1>
+  <h1>diccionario jejeje</h1>
 
   <select id="modo">
     <option value="alfabetico">Alfabético</option>
