--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <option value="temas">Temático</option>
   </select>
 
+  <input type="text" id="busqueda" placeholder="Buscar palabra..." />
   <div id="contenido"></div>
 
   <script src="script.js"></script>
