--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <option value="temas">Temático</option>
   </select>
 
-  <input type="text" id="busqueda" placeholder="Buscar palabra..." />
-  <div id="contenido"></div>
+<input type="text" id="busqueda" placeholder="Escribe una palabra para rimar..." />
+<div id="contenido"></div>
+
 
   <script src="script.js"></script>
 </body>
