--- a/index.html
+++ b/index.html
@@ -20,5 +20,16 @@
 
 
   <script src="script.js"></script>
+
+  <div class="config">
+  <label for="tema">🎨 Tema:</label>
+  <select id="tema">
+    <option value="azul">Azul</option>
+    <option value="verde">Verde</option>
+    <option value="rojo">Rojo</option>
+    <option value="morado">Morado</option>
+  </select>
+</div>
+  
 </body>
 </html>
