--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Diccionario de Rimas 🎤</h1>
+  <h1>Diccionario de Rimas asi bien rimosas</h1>
 
   <div class="config">
-    <label for="modo">📚 Modo:</label>
+    <label for="modo">Modo:</label>
     <select id="modo">
       <option value="alfabetico">Alfabético</option>
       <option value="sinonimos">Sinónimos</option>
@@ -19,7 +19,7 @@
   </div>
 
   <div class="config">
-    <label for="tema">🎨 Tema:</label>
+    <label for="tema">Tema asi de kolores chisyoso</label>
     <select id="tema">
       <option value="azul">Azul</option>
       <option value="verde">Verde</option>
@@ -28,7 +28,7 @@
     </select>
   </div>
 
-  <input type="text" id="busqueda" placeholder="Escribe una palabra para rimar..." />
+  <input type="text" id="busqueda" placeholder="Escribe una palabra con la que quieras rimar:" />
   <div id="contenido"></div>
 
   <script src="script.js"></script>
