--- a/index.html
+++ b/index.html
@@ -3,23 +3,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Diccionario de Rimas</title>
+  <title>Diccionario de Rimas rimonas</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Diccionario de Rimas asi bien rimosas</h1>
+  <h1 id="titulo">Diccionario de Rimas rimonas </h1>
 
   <div class="config">
-    <label for="modo">Modo:</label>
-    <select id="modo">
-      <option value="alfabetico">Alfabético</option>
-      <option value="sinonimos">Sinónimos</option>
-      <option value="temas">Temático</option>
+    <label for="idioma">🌍 Idioma:</label>
+    <select id="idioma">
+      <option value="es">Español</option>
+      <option value="en">Inglés</option>
+      <option value="fr">Francés</option>
     </select>
-  </div>
 
-  <div class="config">
-    <label for="tema">Tema asi de kolores chisyoso</label>
+    <label for="tema">🎨 Tema asi de kolores shistosones </label>
     <select id="tema">
       <option value="azul">Azul</option>
       <option value="verde">Verde</option>
@@ -28,7 +26,7 @@
     </select>
   </div>
 
-  <input type="text" id="busqueda" placeholder="Escribe una palabra con la que quieras rimar:" />
+  <input type="text" id="busqueda" placeholder="Escribe una palabra para rimar bien rimador..." />
   <div id="contenido"></div>
 
   <script src="script.js"></script>
